<resources>
    <string name="app_name">HistoryApp</string>
    <!--Button Text on Main Activity-->
    <string name="find_sites_button_text">See all sites</string>
    <string name="map_sites_button_text">See sites on map</string>
    <string name="find_sites_near_me_button_text">Find sites near me</string>
    <!--Button Text on Details Activity-->
    <string name="details_get_there_button">Get me there</string>
    <!--Titles for Details Activity-->
    <string name="opening_times_title">Opening times:</string>
    <string name="operated_by_title">Operated by:</string>
    <string name="status_details_title">Current status:</string>
    <string name="address_title">Address - Click to get me there</string>
    <string name="history_title">Brief history of the site</string>
    <string name="audio_title">Detailed history of the site</string>
    <string name="details_rating_title">Site rating</string>
    <!--History strings-->
    <string name="warkworth_History">Wark was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="dunstan_History">Dunstan was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="rising_History">Rising was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="berk_History">Berk was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="warwick_History">Warwick was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="banbury_History">Ban was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="alnwick_History">alnwick was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="dover_History">Dover was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="raby_History">Raby was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>
    <string name="caen_History">Caen was built in this year. \n This is the second line of the history. \n This is the third line of the history.</string>


</resources>
